crates/credential/tests/probes/capability_subtrait_testable_no_method.stderr
error[E0046]: not all trait items implemented, missing: `test`
  --> tests/probes/capability_subtrait_testable_no_method.rs:54:1
   |
54 | impl Testable for Dummy {}
   | ^^^^^^^^^^^^^^^^^^^^^^^ missing `test` in implementation
   |
   = help: implement the missing item: `fn test(_: &<Self as Credential>::Scheme, _: &CredentialContext) -> impl Future<Output = Result<TestResult, CredentialError>> + Send { todo!() }`
